kubernetes/authentication/auth-namespace.yaml
---
# Creating namespace for traefik to be installed in
apiVersion: v1
kind: Namespace
metadata:
  name: authentication
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
